# dqplus-hackathon-2026

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
backend/agent/extract/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/agent/extract/app/: config.py  main.py
backend/agent/extract/app/db/: __init__.py
backend/agent/extract/tests/: README.md
backend/gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
backend/gateway/app/: config.py  db.py  deps.py  errors.py  main.py  security.py  serializers.py
backend/gateway/app/routers/: auth.py  matches.py  profiles.py
backend/gateway/app/services/: auth_service.py  profile_service.py
backend/gateway/src/: app.js  index.js
backend/gateway/src/config/: database.js  swagger.js
backend/gateway/src/middleware/: authorize.js
backend/gateway/src/models/: index.js  profile.model.js  user.model.js
backend/gateway/src/routes/: auth.routes.js  matches.routes.js  profile.routes.js
backend/gateway/src/services/: auth.service.js  profile.service.js
backend/gateway/tests/: README.md
backend/gateway/tests/e2e/: conftest.py  test_auth.py  test_health.py  test_matches.py  test_profiles.py
backend/matching-engine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/matching-engine/app/: config.py  db.py  main.py
backend/matching-engine/app/routers/: matches.py
backend/matching-engine/app/services/: matching.py  scoring.py
backend/matching-engine/tests/: README.md
backend/matching-engine/tests/e2e/: conftest.py  test_health.py  test_matches_founders_investors.py  test_matches_investors_founders.py  test_matches_proxy.py  test_not_found.py
mobile/: App.js  (+3 more)
(+138 files in other folders)
