[project]
name = "gateway"
version = "1.0.0"
description = "Sandbox sample REST API gateway"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "asyncpg>=0.30",
    "bcrypt>=4.2",
    "pyjwt>=2.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-json-report>=1.5",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
