[project]
name = "extract-agent"
version = "1.0.0"
description = "Extracts structured founder/investor info and stores embeddings in pgvector"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "openai>=1.54.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
